--- a/src/data.qrc
+++ b/src/data.qrc
@@ -10,5 +10,6 @@
         <file>data/icons/route.png</file>
         <file>data/icons/save.png</file>
         <file>data/icons/add.png</file>
+        <file>data/icons/new.png</file>
     </qresource>
 </RCC>
