--- a/src/data.qrc
+++ b/src/data.qrc
@@ -11,5 +11,6 @@
         <file>data/icons/save.png</file>
         <file>data/icons/add.png</file>
         <file>data/icons/new.png</file>
+        <file>data/style/default_style.qss</file>
     </qresource>
 </RCC>
