--- a/src/data/style/default_style.qss
+++ b/src/data/style/default_style.qss
@@ -19,21 +19,14 @@
  *   Github:     https://github.com/Samuele458
  */
 
-#include <QApplication>
-#include "dialogs/mainwindow.h"
 
-
-int main(int argc, char *argv[])
-{
-    QApplication a(argc, argv);
-    MainWindow dijkstraWindow;
-
-    QFile File(":/data/style/default_style.qss");
-      File.open(QFile::ReadOnly);
-      QString StyleSheet = QLatin1String(File.readAll());
-
-      a.setStyleSheet(StyleSheet);
-
-    dijkstraWindow.show();
-    return a.exec();
+QWidget {
+    background-color: #4D5869;
 }
+
+
+
+
+
+
+
