--- a/src/data.qrc
+++ b/src/data.qrc
@@ -12,5 +12,6 @@
         <file>data/icons/add.png</file>
         <file>data/icons/new.png</file>
         <file>data/style/default_style.qss</file>
+        <file>data/default_settings.ini</file>
     </qresource>
 </RCC>
